<resources>
    <string name="app_name">Kafelki</string>
    <string name="action_settings">Settings</string>

    <string name="start_button">Graj</string>
    <string name="shop_button">Sklep</string>
    <string name="leaderboards_button">Rankingi</string>
    <string name="login_button">Zaloguj</string>
    <string name="logout_button">Wyloguj</string>
    <string name="initial_points">0</string>
    <string name="game_finished">Koniec gry!</string>
    <string name="return_to_main_menu">Wróć do menu</string>
    <string name="play_again">Zagraj ponownie</string>
    <string name="select_difficulty_title">Poziom trudności</string>
    <string name="very_easy_difficulty">Bardzo łatwy</string>
    <string name="short_very_easy_difficulty">B. łatwy</string>
    <string name="easy_difficulty">Łatwy</string>
    <string name="medium_difficulty">Normalny</string>
    <string name="hard_difficulty">Trudny</string>
    <string name="leaderboard_header">Tablica wyników</string>
    <string name="shop_header">Sklep</string>
    <string name="shop_item_locked">Zablokowany</string>
    <string name="selected_shop_item">Wybrany</string>
</resources>